SONARIAC-694 Create integration test for Hadolint (Docker)